@@ -26,8 +26,12 @@
 
 namespace optimization
 {
-  DummySolver::DummySolver (function_t fct, size_type n, gradient_t g) throw ()
-    : Solver (fct, n, g)
+  DummySolver::DummySolver (function_t fct,
+                            size_type n,
+                            gradient_t g,
+                            hessian_t h,
+                            jacobian_t j) throw ()
+    : Solver (fct, n, g, h, j)
   {
     result_ = SolverError ();
   }
