@@ -1,3 +1,15 @@
+2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add Hessian/Jacobian handling.
+	* src/dummy.cc,
+	* src/dummy.hh: Do not use Hessian, Jacobian with Dummy.
+	* src/ipopt.cc,
+	* src/ipopt.hh: Pass Hessian and Jacobian to Ipopt.
+	* src/solver.cc,
+	* src/solver.hh: Fix shared API to include Jacobian and Hessian.
+	* tests/ipopt.cc: Add Jacobian, Hessian values.
+	* tests/simple-test.cc: Do not use an Hessian or a Jacobian.
+
 2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Enhance constraint handling, add constraints in Ipopt test.
